# poe-market-analyser

./: .gitignore  CONTINUATION_PROMPT.md  GITHUB_SETUP.md  PROJECT_STATE.md  README.md  pyproject.toml
data/recipes/: poe1_mirage_amethyst_ring_chaos_res_essence_recipe.yaml  poe1_mirage_eldritch_attack_speed_gloves_essence_recipe.yaml  (+4 more)
poe_market_analyser_mvp/: README.md  pyproject.toml
poe_market_analyser_mvp/data/recipes/: poe1_mirage_viper_touch_spiked_gloves_recipe_cleaned.yaml
poe_market_analyser_mvp/src/poe_market_analyser/: cli.py
poe_market_analyser_mvp/src/poe_market_analyser/application/: profit_engine.py  recipe_service.py
poe_market_analyser_mvp/src/poe_market_analyser/domain/: models.py  validation.py
poe_market_analyser_mvp/src/poe_market_analyser/infrastructure/importers/: yaml_recipe_importer.py
poe_market_analyser_mvp/src/poe_market_analyser/infrastructure/storage/: sqlite_recipe_repository.py
poe_market_analyser_mvp/tests/: test_profit_engine.py  test_recipe_validation.py  test_sqlite_recipe_repository.py  test_yaml_recipe_importer.py
tests/: test_auto_analysis_service.py  test_manual_price_overrides.py  test_market_price_aliases.py  test_output_price_overrides.py  test_output_pricing.py  test_poe_ninja_provider.py  test_poe_trade_provider.py  test_price_resolver.py  test_profit_engine.py  test_recipe_pack_import.py  test_recipe_ranking_service.py  test_research_recipe_pack.py  test_sqlite_market_repository.py  test_sqlite_recipe_repository.py  test_trade_price_estimator.py  test_trade_query_builder.py  test_yaml_recipe_importer.py
(+27 files in other folders)
