[project]
name = "poe-market-analyser"
version = "0.1.0"
description = "MVP core for Path of Exile 1 crafting market analysis."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[project.scripts]
poe-market-analyser = "poe_market_analyser.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
